trying to add identity for login

--- a/StudentManagement/Views/Course/FrontPage.cshtml
+++ b/StudentManagement/Views/Course/FrontPage.cshtml
@@ -21,7 +21,7 @@
                 <table class="table table-hover align-middle mb-0">
                     <thead class="table-light">
                         <tr>
-                            <th style="width:60px;">#</th>
+                            <th style="width:60px;">S/N</th>
                             <th>Course Name</th>
                             <th class="text-center" style="width:180px;">Actions</th>
                         </tr>
