--- a/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/Views/Shared/_Layout.cshtml
@@ -35,6 +35,38 @@
                     </ul>
                 </div>
             </div>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <li class="nav-item">
+                    <form asp-area="Identity"
+                          asp-page="/Account/Logout"
+                          method="post"
+                          class="d-inline">
+                        <button type="submit" class="nav-link btn btn-link text-dark">
+                            Logout
+                        </button>
+                    </form>
+                </li>
+            }
+            else
+            {
+                <li class="nav-item">
+                    <a class="nav-link"
+                       asp-area="Identity"
+                       asp-page="/Account/Login">
+                        Login
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link"
+                       asp-area="Identity"
+                       asp-page="/Account/Register">
+                        Register
+                    </a>
+                </li>
+            }
+
         </nav>
     </header>
     <div class="container">
@@ -42,6 +74,25 @@
             @RenderBody()
         </main>
     </div>
+
+    @* @if (User.Identity.IsAuthenticated)
+    {
+        <li class="nav-item">
+            <form asp-area="Identity" asp-page="/Account/Logout" method="post">
+                <button class="btn btn-link nav-link">Logout</button>
+            </form>
+        </li>
+    }
+    else
+    {
+        <li class="nav-item">
+            <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        </li>
+    } *@
+
 
     <footer class="border-top footer text-muted">
         <div class="container">
