--- a/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Student Portal</h1>
+    <p>Please <a href="/Identity/Account/Login">login</a> to continue.</p>
+    <p>Or <a href="/Identity/Account/Register">register</a>.</p>
 </div>
