--- a/StudentManagement/Views/Shared/_LoginPartial.cshtml
+++ b/StudentManagement/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@* @using Microsoft.AspNetCore.Identity
 @using StudentManagement.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
@@ -25,4 +25,4 @@ else
         <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
-</ul>
+</ul> *@
